fix: font size and spacing

--- a/hrms/public/scss/interview.scss
+++ b/hrms/public/scss/interview.scss
@@ -1,9 +1,10 @@
 .circular-progress {
-	width: 100px;
-	height: 100px;
-	line-height: 100px;
+	width: 80px;
+	height: 80px;
+	line-height: 80px;
 	position: relative;
 }
+
 .circular-progress:after {
 	content: "";
 	width: 100%;
@@ -14,6 +15,7 @@
 	top: 0;
 	left: 0;
 }
+
 .circular-progress > span {
 	width: 50%;
 	height: 100%;
@@ -22,18 +24,21 @@
 	top: 0;
 	z-index: 1;
 }
+
 .circular-progress .progress-left {
 	left: 0;
 }
+
 .circular-progress .progress-bar {
 	width: 100%;
 	height: 100%;
 	background: none;
-	border-width: 7px;
+	border-width: 6px;
 	border-style: solid;
 	position: absolute;
 	top: 0;
 }
+
 .circular-progress .progress-left .progress-bar {
 	left: 100%;
 	border-top-right-radius: 80px;
@@ -42,9 +47,11 @@
 	-webkit-transform-origin: center left;
 	transform-origin: center left;
 }
+
 .circular-progress .progress-right {
 	right: 0;
 }
+
 .circular-progress .progress-right .progress-bar {
 	left: -100%;
 	border-top-left-radius: 80px;
@@ -54,12 +61,13 @@
 	transform-origin: center right;
 	animation: loading-1 0.8s linear forwards;
 }
+
 .circular-progress .progress-value {
 	width: 100%;
 	height: 100%;
-	font-size: 22px;
-	text-align: center;
+	font-size: 15px;
 	font-weight: bold;
+	text-align: center;
 	position: absolute;
 }
 
@@ -77,6 +85,7 @@
 		transform: rotate(var(--deg-right));
 	}
 }
+
 @keyframes loading-2 {
 	0% {
 		-webkit-transform: rotate(0deg);
